--- a/sass/products_style.sass
+++ b/sass/products_style.sass
@@ -22,8 +22,17 @@
         right: 0
         top: 10px
         margin-right: 30px
+    &-addBtn
+        border: 1px solid black
+        a
+            padding: 0 2px 0 2px
+            text-decoration: none
+            color: black
     &-deleteBtn
-        margin-left: 
+        border: 1px solid black
+        &:hover
+            border: 1px solid black
+            
 .main
     &-wrapper
         margin-top: 30px
@@ -31,6 +40,7 @@
         display: grid
         grid-template-columns: repeat(4, 1fr)
         grid-template-rows: repeat(3, minmax(210px, auto))
+        grid-auto-rows: 210px
         gap: 60px 
     &-item
         position: relative
@@ -43,8 +53,9 @@
         top: 30px
         left: 30px
     hr
-        margin-top: 30px
+        margin-top: 25px
     h3
-        margin-top: 10px 
+        margin-bottom: 0px
         font-size: 15px
         text-align: center
+    
