--- a/sass/products_style.sass
+++ b/sass/products_style.sass
@@ -34,6 +34,7 @@
             border: 1px solid black
             
 .main
+    position: relative
     &-wrapper
         margin-top: 30px
         width: 1440px
@@ -58,4 +59,14 @@
         margin-bottom: 0px
         font-size: 15px
         text-align: center
-    
+    &-deleteBtn
+        background-color: #f0f0f0
+        border: 1px solid black
+        position: absolute
+        top: -89px
+        right: 75px
+        width: 110px
+        height: 26px
+        &:hover
+            background-color: #f0f0f0
+            border: 1px solid black
