--- a/sass/products_style.sass
+++ b/sass/products_style.sass
@@ -11,26 +11,34 @@
     margin: 0 auto 
 
 
-.header
-    padding-top: 50px
-    h1
+.nav
+    position: relative
+    padding-top: 30px
+    &-title
         margin-left: 30px
-    hr
+    &-hr
+        width: 100%
         margin-top: 20px
     &-buttons
         position: absolute
         right: 0
-        top: 10px
+        top: 45px
         margin-right: 30px
-    &-addBtn
+    &-add-btn
         border: 1px solid black
+        border-radius: 3px
         a
             padding: 0 2px 0 2px
             text-decoration: none
             color: black
-    &-deleteBtn
+    &-delete-btn
+        background-color: #f0f0f0
         border: 1px solid black
+        width: 110px
+        height: 26px
+        border-radius: 3px
         &:hover
+            background-color: #f0f0f0
             border: 1px solid black
             
 .main
@@ -53,20 +61,10 @@
         position: absolute
         top: 30px
         left: 30px
+.footer
     hr
-        margin-top: 25px
+        margin-top: 10px
     h3
         margin-bottom: 0px
         font-size: 15px
         text-align: center
-    &-deleteBtn
-        background-color: #f0f0f0
-        border: 1px solid black
-        position: absolute
-        top: -89px
-        right: 75px
-        width: 110px
-        height: 26px
-        &:hover
-            background-color: #f0f0f0
-            border: 1px solid black
